--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/pwa": "^3.0.0-beta.14",
     "chokidar": "^3.4.0",
     "cross-env": "^7.0.3",
+    "echarts": "^4.9.0",
     "fibers": "^5.0.0",
     "har-validator": "^5.1.5",
     "nuxt-sass-resources-loader": "^2.0.5",
@@ -22,11 +23,13 @@
     "sass": "^1.32.8",
     "swiper": "^6.6.2",
     "to": "^0.2.9",
-    "vue-awesome-swiper": "^4.1.1"
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-echarts": "^6.0.0-rc.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.13.15",
     "@nuxtjs/style-resources": "^1.0.0",
+    "@vue/composition-api": "^1.0.0-rc.11",
     "nuxt": "^2.7.1",
     "sass-loader": "^7.1.0",
     "vue-multiselect": "^2.1.6"
