--- a/package.json
+++ b/package.json
@@ -30,8 +30,15 @@
     "@babel/preset-env": "^7.13.15",
     "@nuxtjs/style-resources": "^1.0.0",
     "@vue/composition-api": "^1.0.0-rc.11",
+    "autoprefixer": "^9.8.6",
     "nuxt": "^2.7.1",
+    "postcss": "^7.0.32",
     "sass-loader": "^7.1.0",
     "vue-multiselect": "^2.1.6"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
