--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/pwa": "^3.0.0-beta.14",
     "chokidar": "^3.4.0",
     "cross-env": "^7.0.3",
